<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quiz App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name Last Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_import">Home</string>
    <string name="menu_gallery">My Account</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_shared">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_slideshow1">1008670849727-p30eppu2538dv23n0pnafi61b2a70kng.apps.googleusercontent.com</string>
    <string name="menu_slideshow">LeaderBoard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
<<<<<<< HEAD
    <string name="title_activity_answers">AnswersActivity</string>

=======
    <string name="open_drawer">Mở thanh điều hướng</string>
    <string name="close_drawer">Đóng thanh điều hướng</string>
>>>>>>> 42bfb210e1ed75ed27da6ff06d2797b9156a799a
</resources>